<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/app_background"
  android:orientation="vertical">
  <TextView android:padding="10dp"
    android:layout_height="wrap_content"
    android:id="@+id/enter_info_prompt"
    android:text="@string/label_enter_your_info"
    android:layout_width="match_parent"
    android:background="@color/header"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="15sp"
  />
	<ScrollView android:layout_width="match_parent"
	  android:layout_height="match_parent">
		<LinearLayout android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:background="@color/app_background"
		  android:orientation="vertical">
		   <LinearLayout android:orientation="vertical"
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:paddingTop="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp">
		    <TextView android:layout_height="wrap_content"
		      android:textSize="15sp"
		      android:layout_width="wrap_content"
		      android:padding="5dp"
		      android:textColor="@color/dark_gray"
		      android:text="@string/label_phone_number"
		    />
		    <AutoCompleteTextView android:layout_height="wrap_content"
		      android:layout_width="match_parent"
		      android:id="@+id/entry_phone"
		      android:textStyle="bold"
		      android:inputType="phone"
		      android:imeOptions="actionNext"
		    />
		  </LinearLayout>
		   <LinearLayout
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent">
		    <LinearLayout
		      android:paddingTop="5dp"
		      android:paddingLeft="10dp"
		      android:paddingRight="10dp"
		      android:layout_weight="1"
		      android:layout_height="wrap_content"
		      android:layout_width="match_parent"
		      android:orientation="vertical">
		      <TextView
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:layout_width="wrap_content"
		        android:padding="5dp"
		        android:textColor="@color/dark_gray"
		        android:text="@string/label_first_name"/>
		      <EditText
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:id="@+id/entry_first_name"
		        android:textStyle="bold"
		        android:capitalize="words"
		        android:imeOptions="actionNext"
		        android:inputType="textCapWords"
		        android:nextFocusDown="@+id/entry_last_name"
		        />
		    </LinearLayout>
		    <LinearLayout
		      android:paddingTop="5dp"
		      android:paddingLeft="10dp"
		      android:paddingRight="10dp"
		      android:layout_weight="1"
		      android:layout_height="wrap_content"
		      android:layout_width="match_parent"
		      android:orientation="vertical">
		      <TextView
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:layout_width="wrap_content"
		        android:padding="5dp"
		        android:textColor="@color/dark_gray"
		        android:text="@string/label_last_name"/>
		      <EditText
		        android:layout_height="wrap_content"
		        android:layout_width="match_parent"
		        android:id="@+id/entry_last_name"
		        android:textStyle="bold"
		        android:capitalize="words"
		        android:inputType="textCapWords"
		        android:imeOptions="actionNext"        
		        />        
		    </LinearLayout>  
		  </LinearLayout>
		  <LinearLayout
		    android:paddingTop="5dp"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:layout_height="wrap_content"
		    android:layout_width="match_parent"
		    android:orientation="vertical">
		    <TextView
		      android:layout_height="wrap_content"
		      android:textSize="15sp"
		      android:layout_width="wrap_content"
		      android:padding="5dp"
		      android:textColor="@color/dark_gray"
		      android:text="@string/label_email_address"/>
		    <EditText
		      android:layout_height="wrap_content"
		      android:layout_width="match_parent"
		      android:id="@+id/entry_email"
		      android:textStyle="bold"
		      android:inputType="textEmailAddress"
		      android:imeOptions="actionGo"
		      />
		  </LinearLayout>
		  <Button
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:layout_width="wrap_content"
		    android:id="@+id/done"
		    android:layout_margin="15dp"
		    android:textColor="@color/white"
		    android:text="@string/done"
		    android:minWidth="100dp"
		    android:textStyle="bold"
		    android:textSize="15sp"
		  />
		</LinearLayout>
</ScrollView>  
</LinearLayout>